apps/splunk/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: splunk-lab
  labels:
    openshift.io/cluster-monitoring: "true"
