apps/splunk/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: splunk
  namespace: splunk-lab
spec:
  replicas: 1
  selector:
    matchLabels:
      app: splunk
  template:
    metadata:
      labels:
        app: splunk
    spec:
      containers:
        - name: splunk
          image: splunk/splunk:10.2-rhel9
          ports:
            - containerPort: 8000
            - containerPort: 8088
          volumeMounts:
            - name: splunk-storage
              mountPath: /opt/splunk/etc
              subPath: etc
            - name: splunk-storage
              mountPath: /opt/splunk/var
              subPath: var
      volumes:
        - name: splunk-storage
          persistentVolumeClaim:
            claimName: splunk-pvc
