apps/splunk/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: splunk
  namespace: splunk-lab
spec:
  ports:
    - name: hec
      port: 8088
      protocol: TCP
      targetPort: 8088
    - name: web
      port: 8000
      protocol: TCP
      targetPort: 8000
  selector:
    app: splunk
